get rid of deprecated newInstance() (#374)
Co-authored-by: Jörg Kubitz <jkubitz-eclipse@gmx.de>